# shmcat

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  release.sh
man/: Makefile.am  ftok.man  shmcat.man
man/de/: Makefile.am  ftok.man  shmcat.man
po/: Makevars  POTFILES.in  de.po  shmcat.pot
src/: Makefile.am  filedumper.c  filedumper.h  ftok.c  keythelper.h  main.c  printtext.c  printtext.h  shmcat.c  shmdumper.c  shmdumper.h  status.h  translate.h
